[gd_scene load_steps=8 format=3 uid="uid://jyv77skn4j8y"]

[ext_resource type="Script" path="res://survivors_game.gd" id="1_6y6wp"]
[ext_resource type="PackedScene" uid="uid://bckyn062wm7v4" path="res://player.tscn" id="1_aktsg"]
[ext_resource type="PackedScene" uid="uid://tyv7ucdh4cua" path="res://pine_tree.tscn" id="2_5l7mw"]
[ext_resource type="AudioStream" uid="uid://fx4yavxmea60" path="res://Penguin/penguin_RIP 01.wav" id="5_44xgs"]
[ext_resource type="AudioStream" uid="uid://1mn6du0tdnwe" path="res://Frozen - Let it Go.mp3" id="6_0dhnp"]
[ext_resource type="PackedScene" uid="uid://neq2hsr0lnvb" path="res://snow.tscn" id="6_rjmla"]

[sub_resource type="Curve2D" id="Curve2D_bjfmy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -229, -237, 0, 0, 0, 0, 2151, -237, 0, 0, 0, 0, 2149, 1080, 0, 0, 0, 0, -226, 1065, 0, 0, 0, 0, -231.451, -210.653, 0, 0, 0, 0, -230, -232)
}
point_count = 6

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_6y6wp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1916.0
offset_bottom = 1073.0
color = Color(0.309804, 0.729412, 0.941176, 0.67451)

[node name="Player" parent="." instance=ExtResource("1_aktsg")]
position = Vector2(848, 559)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-659.385, -359.649)
scale = Vector2(0.76308, 0.820046)
curve = SubResource("Curve2D_bjfmy")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-229, -237)

[node name="PineTree4" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(1709, 759)

[node name="PineTree7" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2687, 1094)

[node name="PineTree9" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(162, 508)

[node name="PineTree10" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2036, 214)

[node name="PineTree12" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(182, 113)

[node name="PineTree13" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(1403, 416)

[node name="PineTree14" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(902, 120)

[node name="PineTree15" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-683, 60)

[node name="PineTree43" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-490, -575)

[node name="PineTree44" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(783, -226)

[node name="PineTree45" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2924, -460)

[node name="PineTree46" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2066, -265)

[node name="PineTree47" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(720, -538)

[node name="PineTree48" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(1326, -360)

[node name="PineTree49" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(204, -557)

[node name="PineTree16" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-1074, 850)

[node name="PineTree17" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-678, 586)

[node name="PineTree50" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-246, 1310)

[node name="PineTree52" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-669, 1480)

[node name="PineTree53" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-994, -143)

[node name="PineTree54" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-1216, 262)

[node name="PineTree18" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(479, 1314)

[node name="PineTree18" parent="PineTree18" instance=ExtResource("2_5l7mw")]
position = Vector2(-72, 304)

[node name="PineTree56" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-119, -303)

[node name="PineTree55" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-225, 483)

[node name="PineTree20" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(518, 859)

[node name="PineTree24" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(-793, 1121)

[node name="PineTree28" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2666, 270)

[node name="PineTree33" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(1446, 1716)

[node name="PineTree35" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2093, 1641)

[node name="PineTree59" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2419, 1314)

[node name="PineTree58" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2016, 1321)

[node name="PineTree36" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2942, 614)

[node name="PineTree37" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(3213, 477)

[node name="PineTree42" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2411, -182)

[node name="PineTree60" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2299, -543)

[node name="PineTree40" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2883, 1)

[node name="PineTree41" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(1707, -528)

[node name="PineTree57" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(3219, 68)

[node name="PineTree38" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2437, 800)

[node name="PineTree29" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(653, 1814)

[node name="PineTree30" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(68, 1590)

[node name="PineTree25" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(1047, 1615)

[node name="PineTree26" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(2874, 1309)

[node name="PineTree27" parent="." instance=ExtResource("2_5l7mw")]
position = Vector2(1275, 1215)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.541176)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 156
text = "Game Over"

[node name="LetItGo" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_0dhnp")

[node name="Dead" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_44xgs")
volume_db = 20.0

[node name="Snow" parent="." instance=ExtResource("6_rjmla")]
position = Vector2(1207, -910)

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
